# bebis-run

./: CMakeLists.txt
inc/: bebis.h  config.h  player.h
include/: bebis.h  config.h  game-manager.h
src/: bebis.c  main.c  player.c
